k8s/keystore-data.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: botbot
    component: keystore-data
  namespace: botbot
  name: keystore-data
spec:
  ports:
  - port: 6379
  selector:
    app: botbot
    component: keystore-data
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keystore-data
  namespace: botbot
spec:
  template:
    metadata:
      labels:
        app: botbot
        component: keystore-data
      namespace: botbot
    spec:
      containers:
      - name: keystore-data
        image: redis
