k8s/nlpService.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: botbot
    component: botbotnlp
  namespace: botbot
  name: botbotnlp
spec:
  ports:
  - port: 5000
  selector:
    app: botbot
    component: botbotnlp
